docs/0.14/_sources/api/gammapy.modeling.models.TemplateSpectralModel.rst.txt
TemplateSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpectralModel.energy
      ~TemplateSpectralModel.meta
      ~TemplateSpectralModel.norm
      ~TemplateSpectralModel.parameters
      ~TemplateSpectralModel.tag
      ~TemplateSpectralModel.values

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpectralModel.__call__
      ~TemplateSpectralModel.copy
      ~TemplateSpectralModel.create
      ~TemplateSpectralModel.energy_flux
      ~TemplateSpectralModel.energy_flux_error
      ~TemplateSpectralModel.evaluate
      ~TemplateSpectralModel.evaluate_error
      ~TemplateSpectralModel.from_dict
      ~TemplateSpectralModel.integral
      ~TemplateSpectralModel.integral_error
      ~TemplateSpectralModel.inverse
      ~TemplateSpectralModel.plot
      ~TemplateSpectralModel.plot_error
      ~TemplateSpectralModel.read_fermi_isotropic_model
      ~TemplateSpectralModel.read_xspec_model
      ~TemplateSpectralModel.spectral_index
      ~TemplateSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy
   .. autoattribute:: meta
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: values

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: read_fermi_isotropic_model
   .. automethod:: read_xspec_model
   .. automethod:: spectral_index
   .. automethod:: to_dict
