docs/0.16/_sources/api/gammapy.modeling.models.TemplateSpectralModel.rst.txt
TemplateSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpectralModel.default_parameters
      ~TemplateSpectralModel.norm
      ~TemplateSpectralModel.parameters
      ~TemplateSpectralModel.reference
      ~TemplateSpectralModel.tag
      ~TemplateSpectralModel.tilt

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpectralModel.__call__
      ~TemplateSpectralModel.copy
      ~TemplateSpectralModel.create
      ~TemplateSpectralModel.energy_flux
      ~TemplateSpectralModel.evaluate
      ~TemplateSpectralModel.evaluate_error
      ~TemplateSpectralModel.from_dict
      ~TemplateSpectralModel.integral
      ~TemplateSpectralModel.inverse
      ~TemplateSpectralModel.plot
      ~TemplateSpectralModel.plot_error
      ~TemplateSpectralModel.read_xspec_model
      ~TemplateSpectralModel.spectral_index
      ~TemplateSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_parameters
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: tilt

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: read_xspec_model
   .. automethod:: spectral_index
   .. automethod:: to_dict
